[gd_scene load_steps=6 format=2]

[ext_resource path="res://bubble/bubble.gd" type="Script" id=1]
[ext_resource path="res://themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://bubble/bubble.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 53.0094

[node name="Bubble" type="RigidBody2D"]
input_pickable = true
mode = 2
physics_material_override = SubResource( 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.96046e-08, -5.96046e-08 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.305
margin_top = -23.5
margin_right = 20.305
margin_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
align = 1
valign = 1

[node name="Lifetime" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="BobTimer" type="Timer" parent="."]
wait_time = 6.283
autostart = true

[connection signal="input_event" from="." to="." method="_on_Bubble_input_event"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
